@@ -1,6 +1,7 @@
 package com.ziminpro.twitter.security;
 
 import java.util.Collections;
+import java.util.List;
 
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.JWTVerifier;
@@ -12,6 +13,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.ReactiveSecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
@@ -27,18 +29,24 @@ public class JwtWebFilter implements WebFilter {
 
     public JwtWebFilter(
             @Value("${security.jwt.secret}") String secret,
-            @Value("${security.jwt.issuer:twitter}") String issuer
+            @Value("${security.jwt.issuer:ums}") String issuer
     ) {
         if (secret == null || secret.isBlank()) {
             throw new IllegalStateException("security.jwt.secret is empty");
         }
+
         Algorithm algorithm = Algorithm.HMAC256(secret);
-        this.verifier = JWT.require(algorithm).withIssuer(issuer).build();
+
+        this.verifier = JWT.require(algorithm)
+                .withIssuer(issuer)
+                .build();
     }
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
-        String authHeader = exchange.getRequest().getHeaders().getFirst(HttpHeaders.AUTHORIZATION);
+        String authHeader = exchange.getRequest()
+                .getHeaders()
+                .getFirst(HttpHeaders.AUTHORIZATION);
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             return chain.filter(exchange);
@@ -52,18 +60,29 @@ public class JwtWebFilter implements WebFilter {
         try {
             DecodedJWT jwt = verifier.verify(token);
 
-            String subject = jwt.getSubject();
-            String email = jwt.getClaim("email").asString();
-            String principal = subject != null ? subject : (email != null ? email : "user");
+            String principal = jwt.getSubject();
 
-            var authentication = new UsernamePasswordAuthenticationToken(
-                    principal,
-                    null,
-                    Collections.emptyList()
-            );
+            List<String> roles = jwt.getClaim("roles").asList(String.class);
+
+            List<SimpleGrantedAuthority> authorities =
+                    roles == null ? List.of() :
+                            roles.stream()
+                                    .filter(r -> r != null && !r.isBlank())
+                                    .map(r -> r.startsWith("ROLE_") ? r : "ROLE_" + r)
+                                    .map(SimpleGrantedAuthority::new)
+                                    .toList();
+
+            UsernamePasswordAuthenticationToken authentication =
+                    new UsernamePasswordAuthenticationToken(
+                            principal,
+                            null,
+                            authorities
+                    );
 
             return chain.filter(exchange)
-                    .contextWrite(ReactiveSecurityContextHolder.withAuthentication(authentication));
+                    .contextWrite(
+                            ReactiveSecurityContextHolder.withAuthentication(authentication)
+                    );
 
         } catch (JWTVerificationException e) {
             exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
